--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <div class="baslik">
         <h1>Gönye Hesabı</h1>
-        <p>İnşaat Kalıbı İçin Gönye Bulma Tekniği ve Programı</p>
+        <p>İnşaat Kalıbı İçin Gönye Programı</p>
       </div>
       <div class="pisagorAlani">
         <div class="container">
